--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,8 @@
 
     <textarea id="inputText" placeholder="Paste your document here..."></textarea>
 
-    <button onclick="generateDoc()">Generate Documentation</button>
+    <button type="button" onclick="generateDoc()">Generate Documentation</button>
+
 
     <pre id="output"></pre>
   </div>
