--- a/templates/index.html
+++ b/templates/index.html
@@ -12,11 +12,12 @@
   <div class="top-bar">
     <span class="japanese-name">プレルナ</span>
 
-    <div class="actions floating-icons">
+    <div class="actions easter-eggs">
   <button id="themeToggle" title="Toggle theme">🌙</button>
-  <a href="#" class="icon float">🐙</a>
-  <a href="#" class="icon float delay">💼</a>
+  <a href="#" class="icon ghost float">🐙</a>
+  <a href="#" class="icon ghost float delay">💼</a>
 </div>
+
 
 
   <div class="container">
